Abstraction added for NearestGreaterSmaller added